# MCRAW_Studio

./: CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.txt  USER_GUIDE.md  VERSIONS.md  configure.bat  github_readme.md  motioncam_tools.spec  version.txt
gui/: motioncam_tools.py
lib/: ColorPipeline.cpp  Debayer.cpp  MovEncoder.cpp
lib/cuda/: BayerPipeline.cu  HwHandoff.cu
lib/include/motioncam/: CudaHwHandoff.hpp
python/: mcraw_py.cpp
test/: bench_upstream.py
